    + include/dpkg.h.in: add setcloexec declaration
    + lib/mlib.c: add setcloexec(), utility function to set FD_CLOEXEC flag
    + lib/dbmodify.c: use setcloexec() on status file
    + main/filesdb.c: use setcloexec for diversions and statoverride files
    + main/archives.c: add functions to initialize and destroy the obstack,
      ensure obstack is initialized in try_remove_can() as well

Fri Jun  8 19:42:43 CEST 2001 Wichert Akkerman <wakkerma@debian.org>

  * po/fr.po: updated

Sat Jun  2 15:09:01 CDT 2001 Adam Heath <doogie@debian.org>

  * scripts/dpkg-architecture.pl: Remove bogus check of $!.

Sat Jun  2 15:04:09 CDT 2001 Adam Heath <doogie@debian.org>

  * scripts/dpkg-source.pl: Reset SIGPIPE back to a default handler, for
    callers that have it masked off.

Sat Jun  2 14:48:35 CDT 2001 Adam Heath <doogie@debian.org>

  * scripts/dpkg-checkbuilddeps.pl: Handle varied use of spaces.

Sat Jun  2 14:09:28 CDT 2001 Adam Heath <doogie@debian.org>

  * lib/parsehelp.c: Remove leading and trailing spaces from versions, and
    check if there are embedded spaces in versions.

Tue May 29 07:27:31 CEST 2001 peter karlsson <peterk@debian.org>

  * po/sv.po: Updated.

Mon May 28 22:54:35 CDT 2001 Adam Heath <doogie@debian.org>

  * configure.in: AC_REQUIRE is not valid outside of AC_DEFUN.
  * automake/dpkg.m4: DPKG_CACHED_TRY_COMPILE was defined with both
    AC_DEFUN() AND define().
 
Mon May 28 19:07:15 CDT 2001 Adam Heath <doogie@debian.org>

  * debian/changelog: Update for 1.9.7.

Mon May 28 19:02:52 CDT 2001 Adam Heath <doogie@debian.org>

  * scripts/dpkg-divert.pl: Fix cleanup of .dpkg-devert.tmp files.

Mon May 28 16:40:19 CDT 2001 Adam Heath <doogie@debian.org>

  * po/it.po: Updated.

Mon May 28 16:27:43 CDT 2001 Adam Heath <doogie@debian.org>

  * main/archives.c: If extracting a directory, and it doesn't already
    exist on disk, and is shared with another package, don't error cause an
    error.
