@@ -13,6 +13,10 @@ Sat Jun  9 00:28:11 CEST 2001 Wichert Akkerman <wakkerma@debian.org>
     + main/filesdb.c: use setcloexec for diversions and statoverride files
     + main/archives.c: add functions to initialize and destroy the obstack,
       ensure obstack is initialized in try_remove_can() as well
+    + lib/parsehelp.c: Correctly handle trailing spaces in versions.
+    + main/dpkg.8: it's /etc/dpkg/dpkg.cfg, not /etc/dpkg.cfg
+    + main/dpkg.8: Improve description of --force-confdef
+    + main/help.c: don't ignore failed maintainer scripts
 
 Fri Jun  8 19:42:43 CEST 2001 Wichert Akkerman <wakkerma@debian.org>
 
